# c_chess

./: .gitignore  CMakeLists.txt  Makefile  README.md
engine/: CMakeLists.txt  Makefile  enginemain.c  main.c
engine/include/: Board.h  BoardViz.h  Evaluation.h  Game.h  Move.h  Piece.h  Position.h  module.h
engine/piecetypes/: King.c  King.h  Rook.c  Rook.h
engine/source/: Board.c  BoardViz.c  Evaluation.c  Game.c  Move.c  Piece.c  Position.c  main.c  module.c
